# obs-ghostscript

./: CMakeLists.txt  README.md
data/locale/: en-US.ini
src/: config.h.in  obs-ghostscript.c  obs-pdf.c
